--- a/src/components/molecules/NumberInputField/NumberInputField.css
+++ b/src/components/molecules/NumberInputField/NumberInputField.css
@@ -10,6 +10,30 @@
   pointer-events: none;
 }
 
-.currency-input {
+.number-input {
+  width: 100%;
+  padding: 0.5rem;
   padding-left: 28px;
+  font-size: 0.95rem;
+  color: #111;
+  background-color: #fff;
+
+  border: 1px solid #d1d5db;
+  border-radius: 4px;
+
+  appearance: none;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+}
+
+.number-input:disabled {
+  background-color: #f3f4f6;
+  color: #9ca3af;
+  cursor: not-allowed;
+}
+
+.number-input:focus {
+  outline: none;
+  border-color: #2563eb;
+  box-shadow: 0 0 0 2px rgba(37, 99, 235, 0.2);
 }
