--- a/src/components/organisms/Form/Form.css
+++ b/src/components/organisms/Form/Form.css
@@ -1,11 +1,12 @@
 .form-container {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
+  gap: 2rem
 }
 
 .full {
   grid-column: span 2;
-  padding-bottom: 4rem;
+  padding-bottom: 2rem;
 }
 
 @media (max-width: 768px) {
